# hiring-radar

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alerts.example.yaml  config.example.yaml  pyproject.toml  requirements.txt  routing.yaml
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  cli.py  config.py  exceptions.py  filters.py  models.py  profiles.py  saved_search.py  utils.py
docs/: ai.md  applications.md  architecture.md  automation.md  discovery.md  intelligence.md  logging_audit.md  mcp.md  monitoring.md  recommendations.md  runtime.md  storage.md  synchronization.md  workflows.md
mcp_server/: README.md  __init__.py  server.py
profiles/: ai.yaml  frontend.yaml  fullstack.yaml  remote.yaml  startup.yaml
scripts/: health_check.py  validate_real_world.py
templates/: enterprise.md  founder.md  recruiter.md  startup.md
tests/: test_agent_approval.py  test_agent_memory.py  test_agent_orchestration.py  test_agent_planner.py  test_agent_tools.py  test_agent_ux.py  test_ai_gateway.py  test_alert_engine.py  test_application_models.py  test_application_repository.py  test_cache.py  test_candidate_profile.py  test_change_detectors.py  test_change_events.py  test_checkpoint.py  test_cli_morning_brief.py  test_cli_new_only.py  test_cli_report.py  test_cli_smoke.py  test_company_profile.py  test_company_research.py  test_company_score.py  test_cover_letter.py  test_daily_digest.py  test_deduplication.py  test_diff.py  test_diff_engine.py  test_discover_workflow.py  test_discovery_coordinator.py  (+74 more)
(+250 files in other folders)
