[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hiring-radar"
version = "0.0.1"
description = "Local-first CLI that discovers hiring companies from public ATS APIs and structures data for cold outreach."
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "typer",
    "httpx",
    "selectolax",
    "pydantic",
    "pydantic-settings",
    "rich",
    "loguru",
    "orjson",
    "tenacity",
    "python-dotenv",
]

[project.scripts]
hiring-radar = "app.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
